adapt tests to new features